--- a/task-03.html
+++ b/task-03.html
@@ -17,10 +17,12 @@
         ul {
             list-style: none;
             display: flex;
+            justify-content: space-between;
+        }
+        img {
             width: 100%;
             max-width: 500px;
             height: auto;
-            justify-content: space-between;
         }
     </style>
 </head>
